css/dipusaurios.scss
/* Colores */


/* Imports */
@import "../js/select/selectordie";
@import "../js/remodal/dist/jquery.remodal";

/* Helpers */
@mixin clearfix {
  &:after {
    content: "";
    display: table;
    clear: both;
  }
}

/* Estilos */
html {
  box-sizing: border-box;
}

*, *:before, *:after {
  box-sizing: inherit;
}

body {
	position: relative;
	font-size: 18px;
	font-family: 'Open Sans', sans-serif;

	background: #C6C6C5 url('../img/fossil-background.png');
	background-repeat: repeat-x;

	@media screen and (max-width: 1350px) {
		font-size: 16px;
	}
}

p {
	line-height: 1.5;
}

a {
	color: #107FC9;
	text-decoration: none;
}

.container,
.card-container {
	max-width: 960px;
	margin: 0 auto;
}

@media screen and (max-width: 768px) {
	.container,
	.card-container {
		max-width: 960px;
		margin: 0 auto;
	}
}

.site-header {
	background: lighten(#C6C6C5, 15%);
	padding: 20px 0;
	margin-bottom: 20px;
	@include clearfix;
}

	.site-title {
		margin: 0;
		font-size: 1em;
		text-transform: uppercase;
		padding: 5px;
	}

	.site-title,
	.site-filter {
		display: inline-block;
		vertical-align: middle;
	}

	#site-disclaimer {
		margin: auto;
		position: absolute;
		top: 1%; left: 0; right: 0;
		max-width: 780px;
		padding: 0 15px;
		height: 500px;
		background: #fff;
		z-index: 999;

		&:before {
			content: '';
			position: absolute;
			top: 0; left: 0; bottom: 0; right: 0;
			margin: auto;
			width: 100%;
			height: 100%;
			background: #000;
			z-index: -2;
		}
	}

	#site-disclaimer-link {
		float: right;
		font-size: 14px;
		color: #107FC9;
		margin: 15px 0;
		text-decoration: none;
		
		&:before {
			content: '?';
			display: inline-block;
			text-align: center;
			margin-right: 5px;
			width: 20px;
			height: 20px;
			line-height: 20px;
			font-size: 12px;
			font-weight: 700;
			color: #FFF;
			background: #107FC9;
			border-radius: 50%;
		}
	}

.flare {
	border-radius: 0!important;
}

.card, 
.card-sizer {
	width: 25%;
}

@media screen and (max-width: 768px) {
	.card, 
	.card-sizer {
		width: 33.3333%;
	}
}

@media screen and (max-width: 480px) {
	.card, 
	.card-sizer {
		width: 50%;
	}
}

@media screen and (max-width: 380px) {
	.card, 
	.card-sizer {
		width: 100%;
	}
}

.card {
	height: 355px;
	min-height: 355px;
	padding: 5px;

	perspective: 800;
}

	.card-image {
		width: 100%;
		height: 100%;
		position: absolute;
	}
	.card-info {
		position: absolute;
		width: 100%;
		z-index: 2;

		height: 80px;
		padding: 10px;
		background: #fff;

		left: 0;
		bottom: 0;
	}

	.card-years {
		position: absolute;
		z-index: 99;

		font-size: 21px;
		text-transform: uppercase;
		font-weight: 700;

		margin: 0;
		padding: 5px;
		background: #107FC9;
		color: #FFF;
	}
		.info-detail {
			margin: 0;
			font-size: 15px;

			&.name {
				font-weight: 700;
				font-size: 18px;
				margin-bottom: 10px;
			}
		}

		.info-contact {
			margin: 10px 0;
			a {
				color: #107FC9;
				text-decoration: none;

				&:hover {
					text-decoration: underline;
				}
			}
		}

.card-wrapper {
	width: 100%;
	height: 100%;
	transform-style: preserve-3d;
	transition: 0.5s;

	&.flipped {
		transform: rotatey(180deg);
	}
}
	.face {
		width: 100%;
		height: 100%;
		position: relative;
		backface-visibility: hidden ;
		background: #FFF;

		transform-style: preserve-3d;
		transition: 0.5s;

		&:hover {
			transform: rotatey(20deg);
		}

		&.front {
			position: absolute;
			z-index: 2;
			cursor: pointer;
		}
		&.back {
			cursor: pointer;
			transform: rotatey(-180deg);
			padding: 15px;
			z-index: 99999;
		}

		ul {
			margin: 10px 0;
			padding: 0 15px;

			li {
				margin: 10px 0;
			}
		}
	}

